# HammingCode

./: .gitignore  CMakeLists.txt  README.md
src/: constants.cpp  file.cpp  hammingCode.cpp  main.cpp  verification.cpp
src/include/: constants.hpp  file.hpp  hammingCode.hpp  verification.hpp
src/verification/: verification.cpp  verification.h
tests/: main.cpp
